# calibration

./: CMakeLists.txt  arm_position_publisher.py  arm_position_publisher.py~  manifest.xml  manifest.xml~  package.xml
include/: constants.hh~
launch/: launchAllRobot.launch  launchAllRobot.launch~  launchKinectRobot.launch  publish_calibration_bag.launch  publish_calibration_bag_multi.launch  static_calibration_poses.launch
scripts/: ar_calibration.py  ar_calibration.py~  arm_position_publisher.py~  restamp_msg.py
src/: #env_setup.cpp#  control_testing.cpp  env_setup.cpp~  query_arm.cpp~
test_results/include/: .constants.hh.swp  constants.hh  constants_18_01_2012.hh
test_results/launch/: broadcast_lab_setting.launch  launchKinectRobot.launch  launchKinectRobot.launch~  static_calibration_poses.launch~
test_results/scripts/: ar_calibration.py  ar_calibration.py~
test_results/src/: env_setup.cpp  query_arm.cpp
